# PeerNodeSDK

./: .gitignore  CMakeLists.txt  Connector.cpp  README.md
android/: .gitignore  settings.gradle
android/pushserver/: build.gradle
android/pushserver/src/main/: AndroidManifest.xml
android/pushserver/src/main/java/app/elaphant/sdk/pushserver/: PushRequest.java  PushResponse.java  PushServer.java  Util.java
android/sdk/: build.gradle
android/sdk/libs/: download-urls  ensure-depends.sh
android/sdk/src/main/java/app/elaphant/sdk/peernode/: Connector.java  PeerNode.java  PeerNodeListener.java
android/test/: build.gradle
android/test/src/main/: AndroidManifest.xml
android/test/src/main/java/app/elaphant/sdk/peernode/test/: BatchMessage.java  FileUtils.java  Helper.java  MainActivity.java
android/test/src/main/java/org/elastos/sdk/contact/test/: MainActivity.java
android/test/src/main/res/layout/: activity_main.xml  batch_send_message.xml
android/test/src/main/res/menu/: menu_main.xml
android/test/src/main/res/values/: strings.xml
ios/: .gitignore
ios/PeerNodeSDK.xcodeproj/: project.pbxproj
ios/PeerNodeSDK.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/PeerNodeSDK.xcodeproj/xcshareddata/xcschemes/: test.xcscheme
ios/frameworks/: download-urls  ensure-depends.sh
ios/frameworks/ContactSDK.framework/: Info.plist
ios/frameworks/ContactSDK.framework/Headers/: ContactSDK-Swift.h
ios/frameworks/ContactSDK.framework/Modules/: module.modulemap
ios/frameworks/ContactSDK.framework/Modules/ContactSDK.swiftmodule/: arm64-apple-ios.swiftmodule  arm64.swiftdoc  x86_64-apple-ios-simulator.swiftmodule  x86_64.swiftdoc
ios/frameworks/CrossPL.framework/: CrossPL  Info.plist
ios/frameworks/CrossPL.framework/Headers/: CrossPL-Swift.h
ios/frameworks/CrossPL.framework/Modules/: module.modulemap
ios/frameworks/CrossPL.framework/Modules/CrossPL.swiftmodule/: arm64-apple-ios.swiftdoc  arm64.swiftmodule  x86_64-apple-ios-simulator.swiftdoc  x86_64-apple-ios-simulator.swiftmodule
ios/sdk/swift/: Connector.swift  PeerNode.swift  PeerNodeListener.swift
ios/test/: ViewController.swift
ios/test/Base.lproj/: Main.storyboard
plugins/: CMakeLists.txt  README.md
plugins/MicroService.Feedback/: CMakeLists.txt  MicroService.cpp  MicroService.h
plugins/MicroService.Manager/: CMakeLists.txt  MS.ManagerCommand.cpp  MS.ManagerCommand.hpp  MS.ManagerListener.cpp  MS.ManagerListener.hpp  MS.ManagerService.cpp  MS.ManagerService.hpp  README.md
plugins/MicroService.Manager/Utils/: ThreadPool.cpp
plugins/example/: CMakeLists.txt  example.cpp
scripts/: build-android.sh  build-ios.sh  build.sh  package-mobile.sh
sdk/: CMakeLists.txt  Connector.cpp  Connector.h  PeerListener.h  PeerNode.cpp  PeerNode.h  PeerNodeSDK.pc.in
sdk/Launcher/: CMakeLists.txt  PeerNodeLauncher.sh  PeerNodeManager.sh  main.cpp
sdk/Launcher/Service/: CMakeLists.txt  MicroService.cpp  MicroService.h
sdk/test/: CMakeLists.txt  ConnectorTest.cpp  ConnectorTest.h  main.cpp
test/: CMakeLists.txt  ConnectorTest.cpp  ConnectorTest.h  main.cpp
